--- a/eShop.WebApp/Pages/Index.cshtml
+++ b/eShop.WebApp/Pages/Index.cshtml
@@ -7,27 +7,14 @@
 <main>
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
         <div class="col-md-5 p-lg-5 mx-auto my-5">
-            <h1 class="display-4 fw-normal">Punny headline</h1>
+            <h1 class="display-4 fw-normal">WELCOME TO eGameShop</h1>
             <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
-            <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+            <a class="btn btn-outline-dark" href="/eShopPages/Products/Games">See More</a>
         </div>
         <div class="product-device shadow-sm d-none d-md-block"></div>
         <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
     </div>
 
-    @foreach (var item in Model.Products)
-    {
-        <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
-            <div class="text-bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-                <div class="my-3 py-3">
-                    <h2 class="display-5">@item.Title</h2>
-                    <p class="lead">@item.Description</p>
-                </div>
-                <div class="bg-body-tertiary shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-            </div>
-        
-        </div>
-    }
 </main>
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
