--- a/eShop.WebApp/Pages/eShopPages/Products/Search.cshtml
+++ b/eShop.WebApp/Pages/eShopPages/Products/Search.cshtml
@@ -1,4 +1,32 @@
-﻿@page
+﻿@page 
 @model eShop.WebApp.Pages.eShopPages.Products.SearchModel
 @{
+}
+
+
+<form method="get" asp-page-handler="SearchSite" class="d-inline-flex">
+    <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search" width="200" name="SearchString" />
+    <button class="btn btn-outline-success" type="submit">Search</button>
+</form>
+
+@foreach (var item in Model.FindProducts)
+{
+    <div class="d-inline-flex ms-5 mt-5">
+        <div class="card shadow-sm border-dark ">
+            <img src="@item.ImgPath" class="border-dark" width="250" height="250">
+            <div class="card-body border-dark">
+                <div>
+                    <p class="card-title">@item.Title</p>
+                    <small class="float-end">@item.Price.-</small>
+                </div>
+                <p class="card-text">@item.Description</p>
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group ms-4">
+                        <button type="button" class="btn btn-sm btn-outline-success">Add Cart</button>
+                        <button type="button" class="btn btn-sm btn-outline-dark ms-4">See more</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 }
