+Admin Page(develop)

--- a/eShop.WebApp/Pages/eShopPages/Products/Games.cshtml
+++ b/eShop.WebApp/Pages/eShopPages/Products/Games.cshtml
@@ -8,11 +8,11 @@
             <p class="lead text-muted">Something short and leading about the collection below—its contents</p>
         </div>
 </section>
-<body>
-    <main class="row gx-2 gy-3 ms-1">
+<body >
+    <main class="row gx-2 gy-3 ms-1" >
         @foreach (var item in Model.Games)
         {
-            <div class="d-inline-flex col-3 ">
+            <div class="d-inline-flex col-3">
                 <div class="card shadow-sm border-dark ">
                     <img src="@item.ImgPath" class="border-dark" width="300" height="300">
                     <div class="card-body border-dark">
@@ -31,6 +31,15 @@
                 </div>
             </div>
         }
+        <nav>
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </nav>
     </main>
 
     @*<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>*@
