--- a/eShop.WebApp/Pages/Shared/_Layout.cshtml
+++ b/eShop.WebApp/Pages/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/eShop.WebApp.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/product.css">
+    <link rel="stylesheet" href="~/lib/FontAwesome/css/all.css">
 </head>
 <body>
     <header>
