--- a/eShop.WebApp/Pages/Validation/LoginValidation.cshtml
+++ b/eShop.WebApp/Pages/Validation/LoginValidation.cshtml
@@ -24,7 +24,7 @@
             <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
         </form>
         <div>
-            <p class="mt-1 z-1">Are you not a member?  <a href="#" class="text-decoration-none">Register Here</a></p>
+            <p class="mt-1 z-1">Are you not a member?  <a href="/eShopPages/Users/CRUD/CreateUser" class="text-decoration-none">Register Here</a></p>
         </div>
     </main>
 </body>
