--- a/eShop.WebApp/Pages/eShopPages/Admin/CRUD/UpdateProduct.cshtml
+++ b/eShop.WebApp/Pages/eShopPages/Admin/CRUD/UpdateProduct.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model eShop.WebApp.Pages.eShopPages.Admin.CRUD.CreateProductModel
+@model eShop.WebApp.Pages.eShopPages.Admin.CRUD.UpdateProductModel
 @{
 }
 <form method="post" class="d-flex justify-content-center">
@@ -7,31 +7,31 @@
     <div class="d-flex flex-column justify-content-center col-6">
         <div class="mb-3 col-12">
             <label class="form-label">Title</label>
-            <input asp-for="ProductName" type="text" class="form-control">
+            <input asp-for="NewName" type="text" class="form-control">
         </div>
         <div class="mb-3 col-12">
             <label class="form-label">Description</label>
-            <textarea asp-for="ProductDescription" class="form-control"></textarea>
+            <textarea asp-for="NewDescription" class="form-control"></textarea>
         </div>
         <div class="mb-3">
             <label class="form-label">Manufacture</label>
-            <input asp-for="Manufacture" type="text" class="form-control">
+            <input asp-for="NewManufacture" type="text" class="form-control">
         </div>
         <div class="mb-3">
             <label class="form-label">Price</label>
-            <input asp-for="Price" type="number" step="0.01" class="form-control" />
+            <input asp-for="NewPrice" type="number" step="0.01" class="form-control" />
         </div>
         <div class="mb-3">
             <label class="form-label">Stock</label>
-            <input asp-for="Stock" type="number" class="form-control" />
+            <input asp-for="NewStock" type="number" class="form-control" />
         </div>
         <div class="mb-3">
             <label class="form-label">Image</label>
-            <input asp-for="Image" type="file" accept="image/*" class="form-control" />
+            <input asp-for="NewImage" type="file" class="form-control" />
         </div>
         <div>
             <label>Categories:</label>
-            <select asp-for="CategoryIds" asp-items="@Model.Categories" multiple>
+            <select asp-for="NewCategoryIds" asp-items="@Model.Categories" multiple>
                 <option value="">Choose Categories</option>
             </select>
         </div>
