--- a/eShop.WebApp/Pages/Shared/_Layout.cshtml
+++ b/eShop.WebApp/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                                 <a class="nav-link active" aria-current="page" href="/Validation/LoginValidation">Sign In</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/eShopPages/Users/Cart">Cart</a>
+                                <a class="nav-link active" aria-current="page" href="/eShopPages/Users/Cart"><i class="fas fa-shopping-cart"></i>-Cart</a>
                             </li>
                         </ul>
                     </div>
