--- a/eShop.WebApp/Pages/eShopPages/Admin/AdminPage.cshtml
+++ b/eShop.WebApp/Pages/eShopPages/Admin/AdminPage.cshtml
@@ -38,7 +38,7 @@
                 <th scope="col">Delete</th>
             </tr>
         </thead>
-        @foreach (var item in Model.Products)
+        @foreach (var item in Model.Products.Items)
         {
             <tbody>
                 <tr>
