--- a/eShop.WebApp/Pages/eShopPages/Admin/CRUD/CreateProduct.cshtml
+++ b/eShop.WebApp/Pages/eShopPages/Admin/CRUD/CreateProduct.cshtml
@@ -2,7 +2,7 @@
 @model eShop.WebApp.Pages.eShopPages.Admin.CRUD.CreateProductModel
 @{
 }
-<form method="post" class="d-flex justify-content-center">
+<form method="post" class="d-flex justify-content-center" enctype="multipart/form-data">
 
     <div class="d-flex flex-column justify-content-center col-6">
         <div class="mb-3 col-12">
