--- a/eShop.WebApp/Pages/eShopPages/Products/Games.cshtml
+++ b/eShop.WebApp/Pages/eShopPages/Products/Games.cshtml
@@ -10,7 +10,7 @@
 </section>
 <body >
     <main class="row gx-2 gy-3 ms-1" >
-        @foreach (var item in Model.Games)
+        @foreach (var item in Model.Games.Items)
         {
             <div class="d-inline-flex col-3">
                 <div class="card shadow-sm border-dark ">
@@ -31,15 +31,28 @@
                 </div>
             </div>
         }
-        <nav>
-            <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-            </ul>
-        </nav>
+        <form method="post" >
+            <nav class="d-flex justify-content-between">
+                <ul class="pagination">
+                    <li class="page-item"><input type="submit" asp-page-handler="Search" asp-route-CurrentPage="@(Model.CurrentPage - 1)" class="page-link" value="Previous" /></li>
+                    @for (int i = 1; i <= Model.Games.PageCount; i++)
+                    {
+                        @*<li class="page-item"><a class="page-link" href="@Url.Page("/Index", new { manufacturerIds = Model.ManufacturerIds, search = Model.Search, categoryId = Model.CategoryId, orderBy = Model.OrderBy, page = i})">@i</a></li>*@
+                        <li class="page-item"><input type="submit" asp-page-handler="Search" asp-route-CurrentPage="@i" value="@i" class="page-link" /></li>
+                    }
+                    <li class="page-item"><input class="page-link" type="submit" asp-page-handler="Search" asp-route-CurrentPage="@(Model.CurrentPage + 1)" value="Next" /></li>
+                </ul>
+                <ul class="pagination">
+                    <li class="page-item">
+                        <select asp-for="PageSize" onchange="document.forms['pageSizeForm'].submit()" class="form-select-sm h-100">
+                            <option value="10">10</option>
+                            <option value="50">50</option>
+                            <option value="100">100</option>
+                        </select>
+                    </li>
+                </ul>
+            </nav>
+        </form>
     </main>
 
     @*<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>*@
