--- a/eShop.WebApp/Pages/eShopPages/Products/Games.cshtml
+++ b/eShop.WebApp/Pages/eShopPages/Products/Games.cshtml
@@ -23,7 +23,9 @@
                         <p class="card-text text-truncate" style="max-width: 250px;">@item.Description</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group ms-4">
-                                <button type="button" class="btn btn-sm btn-outline-success">Add Cart</button>
+                                <form method="post" asp-page-handler="AddToCart">
+                                    <button type="submit" class="btn btn-sm btn-outline-success" asp-route-productId="@item.MasterKey">Add Cart</button>
+                                </form>
                                 <button type="button" class="btn btn-sm btn-outline-dark ms-4">See more</button>
                             </div>
                         </div>
