--- a/eShop.WebApp/Pages/eShopPages/Admin/AdminPage.cshtml
+++ b/eShop.WebApp/Pages/eShopPages/Admin/AdminPage.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="card">
-    <form method="post">
+    <form method="get">
         <h2 class="text-center">Admin</h2>
         <div class="d-flex justify-content-center">
             <div class="d-flex flex-column">
@@ -49,9 +49,10 @@
                     <td>@item.Manufacture</td>
                     <td>@item.Stock</td>
                     <td>@item.ImgPath</td>
-                    <td><a class="btn btn-outline-danger" asp-page="CRUD/UpdateProduct" asp-route-productID="@item.MasterKey"><i class="far fa-edit"></i></a></td>
+                    <td><a class="btn btn-outline-danger" asp-page="/eShopPages/Admin/CRUD/UpdateProduct" asp-route-productID="@item.MasterKey"><i class="far fa-edit"></i></a></td>
                     <td>
-                        <form method="post" asp-page-handler="Delete">
+                        <form method="post">
+                            
                             <button type="submit" class="btn btn-outline-danger" asp-route-productID="@item.MasterKey" onclick="return confirm('Are you sure?')"><i class="far fa-trash-alt"></i></button>
                         </form>
                     </td>
