+admin page +pagination

--- a/eShopOpgave.BlazorUI/Pages/Index.razor
+++ b/eShopOpgave.BlazorUI/Pages/Index.razor
@@ -3,7 +3,4 @@
 <PageTitle>Index</PageTitle>
 
 
-
-<div>
-    <eShopOpgave.BlazorUI.Pages.Components.Products></eShopOpgave.BlazorUI.Pages.Components.Products>
-</div>
+<eShopOpgave.BlazorUI.Pages.Components.IndexComponent></eShopOpgave.BlazorUI.Pages.Components.IndexComponent>
