--- a/eShopOpgave.BlazorUI/Pages/Components/Products.razor
+++ b/eShopOpgave.BlazorUI/Pages/Components/Products.razor
@@ -1,12 +1,16 @@
-﻿@inject IProductAPIServices _productServices
+﻿@page "/products"
+@inject IProductAPIServices _productServices
 @inject NavigationManager _navigationManager
 @inject IToastService _toastService
 
+<form class="d-flex">
+    <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search" @bind="SearchString">
+    <button class="btn btn-primary" type="submit" @onclick="Search">Search</button>
+</form>
 
-<input type="text" @bind="SearchString" />
-<h3>Products</h3>
+<h2 class="card-title mt-3 mb-5 text-center">Products</h2>
 
-<button @onclick='() => _navigationManager.NavigateTo($"/CreateProduct")' class="btn btn-outline-success mb-4 mt-4">Create Product</button>
+
 <body>
     <main class="row gx-2 gy-3 ms-1">
         @foreach (var item in products.items)
@@ -32,20 +36,51 @@
                 </div>
             </div>
         }
+        <div class="d-flex justify-content-center">
+            <ul class="pagination">
+                <li class=@(currentPage == 1 ? "page-item disabled" : "page-item")><a class="page-link" @onclick="PreviousPage">Previous</a></li>
+                @for (var i = 1; i <= totalPages; i++)
+                {
+                    <li class="@(i == currentPage ? "page-item active" : "")"><a class="page-item">@i</a></li>
+                }
+                <li class=@(totalPages == currentPage ? "page-item disabled" : "page-item")><a class="page-link" @onclick="NextPage">Next</a></li>
+            </ul>
+        </div>
     </main>
 </body>
+
 @code {
     private ProductsBase products = new();
-
+    private int count = 8;
+    private int pages;
+    private int currentPage = 1;
+    private int totalPages => (int)Math.Ceiling(decimal.Divide(pages, count));
     private string? SearchString;
 
     protected override async Task OnInitializedAsync()
     {
-        products = await _productServices.GetAllProducts(1, 20);
+        products = await _productServices.GetAllProducts(currentPage, count);
     }
 
-    //public async Task<List<Item>> Search()
-    //{
-        
-    //}
+    private async Task NextPage()
+    {
+        products = await _productServices.GetAllProducts(++currentPage, count);
+    }
+
+    private async Task PreviousPage()
+    {
+        products = await _productServices.GetAllProducts(--currentPage, count);
+    }
+
+    public async Task Search()
+    {
+        if (!string.IsNullOrEmpty(SearchString))
+        {
+            products = await _productServices.Search(SearchString);
+        }
+        else
+        {
+            products = await _productServices.GetAllProducts(currentPage, count);
+        }
+    }
 }
