--- a/eShopOpgave.BlazorUI/Shared/NavMenu.razor
+++ b/eShopOpgave.BlazorUI/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject NavigationManager _navigationManager
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">eShopOpgave.BlazorUI</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -14,11 +16,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-        @*<div class="nav-item px-3">
+        <div class="nav-item px-3">
             <NavLink class="nav-link">
-                <span class="oi oi-plus" aria-hidden="true"></span> Products
+                <span class="oi oi-plus" aria-hidden="true" @onclick='() => _navigationManager.NavigateTo($"/products")'></span> Products
             </NavLink>
-        </div>*@
+        </div>
     </nav>
 </div>
 
