--- a/eShopOpgave.BlazorUI/Shared/MainLayout.razor
+++ b/eShopOpgave.BlazorUI/Shared/MainLayout.razor
@@ -8,9 +8,9 @@
     </div>
 
     <main>
-        @*<div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>*@
+        <div class="top-row px-4">
+            <a href="/Cart/ShoppingCart" target="_blank" class="oi oi-cart" >Cart</a>
+        </div>
 
         <article class="content px-4">
             @Body
