--- a/eShopOpgave.BlazorUI/Shared/NavMenu.razor
+++ b/eShopOpgave.BlazorUI/Shared/NavMenu.razor
@@ -2,7 +2,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">eShopOpgave.BlazorUI</a>
+        <a class="navbar-brand" href="">eGameShop</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -13,12 +13,12 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-account-login" aria-hidden="true"></span> Login
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link">
-                <span class="oi oi-plus" aria-hidden="true" @onclick='() => _navigationManager.NavigateTo($"/products")'></span> Products
+                <span class="oi oi-menu" aria-hidden="true" @onclick='() => _navigationManager.NavigateTo($"/products")'></span> Games
             </NavLink>
         </div>
     </nav>
