--- a/eShopOpgave.BlazorUI/_Imports.razor
+++ b/eShopOpgave.BlazorUI/_Imports.razor
@@ -12,3 +12,5 @@
 @using Blazored.Toast.Services
 @using eShopOpgave.BlazorUI.Services.DTO;
 @using eShopOpgave.BlazorUI.Services.ProductServices;
+@using Blazored.Modal
+@using Blazored.Modal.Services
