--- a/eShopOpgave.BlazorUI/Pages/Components/Products.razor
+++ b/eShopOpgave.BlazorUI/Pages/Components/Products.razor
@@ -4,7 +4,7 @@
 @inject IToastService _toastService
 
 <form class="d-flex">
-    <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search" @bind="SearchString">
+    <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search" @bind-value="SearchString">
     <button class="btn btn-primary" type="submit" @onclick="Search">Search</button>
 </form>
 
@@ -77,6 +77,7 @@
         if (!string.IsNullOrEmpty(SearchString))
         {
             products = await _productServices.Search(SearchString);
+             StateHasChanged();
         }
         else
         {
