--- a/eShopOpgave.BlazorUI/Shared/NavMenu.razor
+++ b/eShopOpgave.BlazorUI/Shared/NavMenu.razor
@@ -17,7 +17,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link">
+            <NavLink class="nav-link" href="">
                 <span class="oi oi-menu" aria-hidden="true" @onclick='() => _navigationManager.NavigateTo($"/products")'></span> Games
             </NavLink>
         </div>
